# ShopBotv1.0

./: Dockerfile  app.py  bot.ini  docker-compose.yaml  messages.json  pyproject.toml
tgbot/: config.py
tgbot/filters/: role.py
tgbot/handlers/: cancel.py  connect_operator.py  menu.py  new_product.py  operators.py  price_list.py  remove_operator.py  select_operator.py  set_message.py  set_operator.py  shop.py  stages.py  start.py
tgbot/middlewares/: authorize.py  db_middleware.py
tgbot/models/: __init__.py  database.py  product.py  user.py
tgbot/states/: create_product.py
