[tool.poetry]
name = "shopbot"
version = "0.1.0"
description = ""
authors = ["Mikhail <zimitskiymisha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b2"
SQLAlchemy = {extras = ["async"], version = "^1.4.32"}
asyncpg = "^0.25.0"
loguru = "^0.6.0"
configparser = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
